# LumixEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md
Code/: CMakeLists.txt
Code/Foundation/Common/: CMakeLists.txt
Code/Foundation/Common/Containers/: ByteBuffer.hpp  OwnedArray.hpp  SortedArray.hpp  UnsortedMap.hpp
Code/Foundation/Common/Math/: ByteColor.hpp  Random.cpp
Code/Foundation/Common/String/: StringConversion.hpp  StringRange.hpp  StringUtility.hpp
Code/Foundation/Geometry/: Epa.cpp  Gjk.cpp  Hull2D.cpp
Code/Foundation/Platform/Windows/: Platform.cmake
Code/Foundation/Support/: FileSupport.cpp
Code/Lumix/: CMakeLists.txt
Code/Lumix/animation/: AnimationStandard.cpp  CMakeLists.txt  Precompiled.hpp  animation.cpp  animation.h  nodes.h
Code/Lumix/animation/editor/: animation_plugins.cpp  editor_nodes.h
Code/Lumix/app/: CMakeLists.txt  main.cpp
Code/Lumix/audio/: AudioStandard.cpp  CMakeLists.txt  Precompiled.hpp  audio_module.cpp  clip.cpp
Code/Lumix/audio/editor/: audio_plugins.cpp
Code/Lumix/audio/win/: audio_device.cpp
Code/Lumix/core/: CMakeLists.txt  CoreStandard.cpp  CoreStandard.hpp  Precompiled.hpp  core.hpp
Code/Lumix/editor/: CMakeLists.txt  EditorStandard.cpp  Precompiled.hpp  asset_browser.cpp  entity_folders.cpp  gizmo.cpp  gizmo.h  log_ui.h  prefab_system.cpp  profiler_ui.cpp  property_grid.cpp  settings.h  spline_editor.cpp  utils.cpp  utils.h  world_editor.cpp  world_editor.h
Code/Lumix/editor/win/: file_system_watcher.cpp
Code/Lumix/engine/: CMakeLists.txt  EngineStandard.cpp  EngineStandard.hpp  Precompiled.hpp  engine.cpp  input_system.cpp  lua_api.cpp  lua_wrapper.cpp  lua_wrapper.h  lumix.h  plugin.cpp  plugins.inl  reflection.cpp  reflection.h  resource.cpp  world.cpp  world.h
Code/Lumix/foundation/: CMakeLists.txt  FoundationStandard.cpp  FoundationStandard.hpp  Precompiled.hpp  allocators.cpp  array.h  atomic.h  color.h  debug.h  file_system.cpp  file_system.h  foundation.h  geometry.cpp  geometry.h  hash.cpp  hash.h  job_system.cpp  log.cpp  log.h  lstring.h  math.cpp  os.h  path.h  profiler.cpp  span.h  stream.cpp  stream.h  string.cpp
Code/Lumix/foundation/win/: debug.cpp  os.cpp  sync.cpp
Code/Lumix/gui/: CMakeLists.txt  GuiStandard.cpp  Precompiled.hpp  gui_module.cpp  gui_system.cpp  sprite.cpp
Code/Lumix/gui/editor/: gui_plugins.cpp
Code/Lumix/lua_script/: CMakeLists.txt  LuaScriptStandard.cpp  Precompiled.hpp  lua_script.h  lua_script_system.cpp  lua_script_system.h
Code/Lumix/lua_script/editor/: lua_script_plugins.cpp
Code/Lumix/navigation/: CMakeLists.txt  NavigationStandard.cpp  Precompiled.hpp  navigation_module.h  navigation_system.cpp
Code/Lumix/navigation/editor/: navigation_plugins.cpp
Code/Lumix/physics/: CMakeLists.txt  PhysicsStandard.cpp  Precompiled.hpp  physics_module.cpp  physics_module.h  physics_resources.cpp  physics_system.cpp
Code/Lumix/physics/editor/: physics_plugins.cpp
Code/Lumix/renderer/: CMakeLists.txt  Precompiled.hpp  RendererStandard.cpp  RendererStandard.hpp  culling_system.cpp  draw2d.h  draw_stream.cpp  font.h  material.h  model.cpp  model.h  particle_system.cpp  particle_system.h  pipeline.cpp  pipeline.h  pose.cpp  render_module.cpp  render_module.h  renderer.cpp  shader.h  terrain.cpp  terrain.h  texture.cpp  voxels.h
Code/Lumix/renderer/editor/: composite_texture.cpp  composite_texture.h  editor_icon.cpp  editor_icon.h  fbx_importer.cpp  fbx_importer.h  game_view.h  model_meta.h  particle_editor.cpp  render_plugins.cpp  scene_view.cpp  terrain_editor.h  voxelizer_ui.cpp  voxelizer_ui.h
Code/Lumix/renderer/gpu/: gpu.cpp  gpu_gl.cpp
Code/Lumix/studio/: CMakeLists.txt
Code/Lumix/studio/win/: main.cpp
src/animation/: animation.h  animation_module.cpp
src/app/: main.cpp
src/core/: hash.h  jobs.cpp  jobs.h  path.h
src/editor/: asset_browser.h  asset_compiler.cpp  prefab_system.h  studio_app.cpp
src/engine/: engine.cpp  engine.h  resource_manager.h
src/navigation/: navigation_module.cpp
src/physics/: physics_module.cpp
src/renderer/: culling_system.cpp  model.h  particle_system.cpp  pipeline.cpp  render_module.cpp  renderer.cpp  renderer.h
src/renderer/editor/: fbx_importer.cpp  fbx_importer.h  model_importer.cpp  render_plugins.cpp  scene_view.cpp
src/renderer/gpu/: gpu_dx12.cpp
