add_subdirectory(core)
add_subdirectory(engine)
add_subdirectory(lua_script)
add_subdirectory(editor)
add_subdirectory(renderer)
add_subdirectory(animation)
add_subdirectory(gui)
add_subdirectory(navigation)
add_subdirectory(audio)
add_subdirectory(physics)
add_subdirectory(app)
add_subdirectory(studio)